# graphql-rust

./: Cargo.toml  README.md
src/: main.rs  schema.rs
